# shop

./: .env  Dockerfile  docker-compose.yml  opisanie.txt  project-main_pg_db.session.sql  pyproject.toml
Postgres/sql/: init_web_server_db.sql
src/: main.py
src/auth/: auth.py  db.py  models.py  nabrosok_oauth2
src/cart/: models.py  routers.py
src/conn/: conn.py
src/order/: db.py  models.py  routers.py
src/products/: db.py  models.py  product.py
src/role/: models.py  routers.py
